2869 duplicate packets with vnics over aggrs